<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add.AddNewPlaces">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/darkBlue"
        android:theme="@style/CustomToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/titleEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:padding="10dp"
                android:inputType="textPersonName"
                android:hint="@string/title"
                android:background="@drawable/custom_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/descriptionEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:padding="10dp"
                android:hint="@string/description"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:background="@drawable/custom_input"
                app:layout_constraintEnd_toEndOf="@+id/titleEt"
                app:layout_constraintStart_toStartOf="@+id/titleEt"
                app:layout_constraintTop_toBottomOf="@+id/titleEt" />

            <EditText
                android:id="@+id/dateEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:padding="10dp"
                android:hint="@string/date"
                android:inputType="date"
                android:background="@drawable/custom_input"
                app:layout_constraintEnd_toEndOf="@+id/descriptionEt"
                app:layout_constraintStart_toStartOf="@+id/descriptionEt"
                app:layout_constraintTop_toBottomOf="@+id/descriptionEt" />

            <EditText
                android:id="@+id/locationEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:padding="10dp"
                android:background="@drawable/custom_input"
                android:inputType="textPersonName"
                android:hint="@string/location"
                app:layout_constraintEnd_toEndOf="@+id/dateEt"
                app:layout_constraintStart_toStartOf="@+id/dateEt"
                app:layout_constraintTop_toBottomOf="@+id/dateEt" />

            <ImageView
                android:id="@+id/wonderImage"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/locationEt"
                app:layout_constraintTop_toBottomOf="@+id/locationEt"
                app:srcCompat="@drawable/ic_baseline_image_24" />

            <TextView
                android:id="@+id/addNewImageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_image"
                android:textColor="@color/lightBlue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/wonderImage"
                app:layout_constraintEnd_toEndOf="@+id/locationEt"
                app:layout_constraintStart_toEndOf="@+id/wonderImage"
                app:layout_constraintTop_toTopOf="@+id/wonderImage" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                android:textSize="18sp"
                android:background="@drawable/custom_button"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wonderImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>